--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/dist/
-/node_modules/
+*dist*
+*node_modules*
+
 /.idea
-build/
-dist/
-node_modules/
 aws-exports.js
 awsconfiguration.json
 .env
 /yarn-error.log
+
+/workspaces/client/node_modules/
